logic on shooting dead, records, localstorage

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
   </head>
 
   <body>
+    <audio id="sound" src="./sound/shot.mp3"></audio>
     <main>
       <h1 class="header">Sea Battle</h1>
       <section>
